--- a/src/scss/vars.scss
+++ b/src/scss/vars.scss
@@ -1,7 +1,6 @@
 $animation_duaration: 200ms;
 $animation_mode: ease-out;
 $gap: 10px;
-$margin: 8px;
 $input_height: 32px;
 $label_margin_bottom: 3px;
 $input_content_gap: 8px;
